 * You can now select any of the 4 sound channels to play sounds to (instead of just Master and SFX).
 * Bug Fixes:
 ** (r489) TellMeWhen-5.0.2.lua:528 attempt to index local "h" (a nil value)
 ** (r491) Re-re-re-re-re-re fixed meta icons that check entire groups
 ** (r492) TellMeWhen-5.0.2.lua:1080 attempt to compare nil with number //(MAYBE)//
 ** (r493) ClassColors.lua:50 Bad argument #1 to :RegisterCallback (string or function expected)
 ** (r496) TellMeWhen-5.1.0\Modules\Texts.lua:124: attempt to concatenate field "?" (a nil value)
 ** (r498) Condition "Mounted" is no longer event based because it seems that it doesn't update on UNIT_AURA all the time
 ** (r499) TellMeWhen_Options.lua:1772: "}" expected (to close "{" at line 1762) near "order"

===v5.0.2===
 * Bug Fixes:
 ** (r485) (Condition): attempt to call global "GetEclipseDirection" (a nil value)

===v5.0.1===
 * Bug Fixes:
 ** (r483) Unit Cooldown icons checking spells by name should now function properly.
 ** (r483) Cooldown sweeps and other icon components are no longer anonymous frames, returning to their previous nomenclature appended by an underscore and the icon's view type (Currently only "icon", more coming soon)
 ** (r483) Fixed a faulty upgrade of the "PassThrough" setting when upgrading past 50035. Settings that already had this faulty upgrade occur may notice that the "Pass Through" setting on some of their events was toggled from checked to unchecked.

===v5.0.0===
 * Super cool changes:
 ** All icon types have been changed to be entirely event based, meaning that they will no longer update themselves when they don't need to, resulting in a (tremendous) performance increase.
 ** The Condition engine has been completely rewritten and is now almost entirely event driven, resulting in another (tremendous) performance increase.